# eddy

./: .gitignore  Cargo.toml  TODO  default.nix  flake.nix  shell.nix  test_tokio.rs
.github/workflows/: ci.yml
eddy/: Cargo.toml  README.md  test
eddy-gflux/: Cargo.toml
eddy-gflux/src/: color.rs
eddy-gflux/src/components/: code_view.rs  code_view_text.rs  dirbar.rs  gutter.rs  mod.rs  window.rs
eddy-gflux/src/widgets/: code_view_text.rs  layout.rs  mod.rs
eddy-highlight/: Cargo.toml
eddy-highlight/src/: lib copy.rs  lib.rs
eddy-model/: Cargo.toml
eddy-model/fuzz/: Cargo.toml
eddy-model/fuzz/fuzz_targets/: buffer.rs
eddy-model/src/: backend.rs  buffer.rs  graphemes.rs  history.rs  lib.rs  project.rs  window.rs  workspace.rs
eddy-model/src/language/: capture.rs  go.rs  layer.rs  mod.rs  rust.rs  util.rs
eddy-model/src/lsp/: client.rs  mod.rs  parse_helper.rs  types.rs  utils.rs
eddy-model/src/style/: attr.rs  color.rs  mod.rs  theme.rs
eddy-ts/: Cargo.toml  build.rs
eddy-ts/src/: language.rs  lib.rs
eddy-ts/tree-sitter-c/: Cargo.toml
eddy-ts/tree-sitter-go/: Cargo.toml
eddy-ts/tree-sitter-html/: Cargo.toml
eddy-ts/tree-sitter-javascript/: Cargo.toml
eddy-ts/tree-sitter-rust/: Cargo.toml
eddy-workspace/: Cargo.toml
eddy-workspace/fuzz/: Cargo.toml
eddy-workspace/fuzz/fuzz_targets/: buffer.rs
eddy-workspace/src/: backend.rs  buffer.rs  graphemes.rs  history.rs  lib.rs  line_ending.rs  msg.rs  point.rs  range.rs  selection.rs  tab_mode.rs  view.rs  workspace.rs
eddy-workspace/src/language/: go.rs  layer.rs  mod.rs  rust.rs
eddy-workspace/src/lsp/: client.rs  parse_helper.rs  result_queue.rs  utils.rs
eddy-workspace/src/style/: color.rs  theme.rs
eddy/src/: app.rs  color.rs  main.rs  prefs_win.rs  scrollable_drawing_area.rs  theme.rs
eddy/src/components/: app.rs  code_view.rs  code_view_text.rs  dirbar.rs  dirbar2.rs  gutter.rs  mod.rs  tab_label.rs  window.rs
eddy/src/glade/: eddy.glade
eddy/src/objects/: file_node.rs  file_node_list.rs  mod.rs  project_list.rs
eddy/src/ui/: code_view.rs  code_view_text.rs  dirbar.rs  eddy.cmb  eddy.cmb.db  eddy.ui  gutter.rs  layout.rs  mod.rs  tab_label.rs  window.rs
eddy/src/widget/: dir_bar.rs  editview.rs  mod.rs
eddy/src/widgets/: code_view_text.rs  gutter.rs  layout.rs
gflux/: Cargo.toml  README.md
gflux/examples/todo/: Cargo.toml  main.rs
gflux/examples/todo/components/: app.rs  list.rs  task.rs  window.rs
gflux/src/: lib.rs  obs.rs  rev_track.rs  revisioned.rs
gflux/src/sync/: mod.rs  obs.rs
gxi/: Cargo.toml  TODO  log
gxi-workspace/: Cargo.toml
gxi-workspace/src/: buffer.rs  lib.rs  selection.rs  workspace.rs
gxi-workspace/src/language/: mod.rs  rust.rs
gxi/fonts/: .uuid
gxi/src/: main.rs  scrollable_drawing_area.rs  theme.rs
gxi/src/ui/: #gxi.glade#  gxi.glade
gxi/src/widget/: dir_bar.rs  editview.rs  tab.rs
wasm-test/: Cargo.toml
