[workspace]
members = [
	"eddy",
	"eddy-workspace",
	"eddy-ts",
	"eddy-highlight"
]

[profile.release]
lto = true
codegen-units = 1
debug = 1

[patch.crates-io]
cairo-rs = { git = "https://github.com/gtk-rs/gtk-rs-core" }
cairo-sys-rs = { git = "https://github.com/gtk-rs/gtk-rs-core" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
glib-sys = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gobject-sys = { git = "https://github.com/gtk-rs/gtk-rs-core" }
graphene-rs = { git = "https://github.com/gtk-rs/gtk-rs-core" }
graphene-sys = { git = "https://github.com/gtk-rs/gtk-rs-core" }
pango = { git = "https://github.com/gtk-rs/gtk-rs-core" }
pangocairo = { git = "https://github.com/gtk-rs/gtk-rs-core" }
pango-sys = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gdk4 = { git = "https://github.com/gtk-rs/gtk4-rs" }
gdk4-sys = { git = "https://github.com/gtk-rs/gtk4-rs" }

