[package]
edition = "2021"
name = "eddy-gflux"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
cairo-rs = "0.17"
eddy-workspace = {path = "../eddy-workspace"}
env_logger = "0.10"
gflux = "0.1"
gio = "0.17"
glib = "0.17"
gobject-sys = "0.17"
gtk = {package = "gtk4", version = "0.6"}
gtk-macros = "0.3"
lazy_static = "1.0"
libc = "0.2"
log = "0.4"
lru-cache = "0.1"
once_cell = "1.3"
pango = "0.17"
pangocairo = "0.17"
ropey = "1.5"
serde_json = "1.0"
servo-fontconfig = "0.5"
