[package]
name = "eddy-workspace"
version = "0.1.0"
edition = "2018"
authors = ["Brian Vincent <brainn@gmail.com>"]
homepage = "https://github.com/bvinc/eddy"
license = "MIT"

[dependencies]
anyhow = "1.0"
log = "0.4"
lsp-types = "0.85"
ropey = "1.2"
unicode-segmentation = "1.3"
eddy-ts = {path = "../eddy-ts"}
eddy-highlight = {path = "../eddy-highlight"}
jsonrpc-lite = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
url = "2.1"