[package]
name = "eddy-workspace"
version = "0.1.0"
edition = "2021"
authors = ["Brian Vincent <brainn@gmail.com>"]
homepage = "https://github.com/bvinc/eddy"
license = "MIT"

[dependencies]
anyhow = "1.0"
log = "0.4"
lsp-types = "0.93"
ropey = "1.2"
unicode-segmentation = "1.3"
eddy-ts = {path = "../eddy-ts"}
jsonrpc-lite = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
url = "2.1"