[package]
authors = ["Brian Vincent <brainn@gmail.com>"]
edition = "2021"
homepage = "https://github.com/bvinc/eddy"
license = "MIT"
name = "eddy-workspace"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
eddy-ts = {path = "../eddy-ts"}
gflux = {path = "../gflux"}
jsonrpc-lite = "0.6"
log = "0.4"
lsp-types = "0.93"
ropey = "1.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
toml = "0.7"
unicode-segmentation = "1.3"
url = "2.1"
