[package]
edition = "2021"
name = "eddy"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
cairo-rs = "0.19"
eddy-model = {path = "../eddy-model"}
env_logger = "0.10"
gflux = {path = "../gflux"}
gio = "0.19"
glib = "0.19"
gobject-sys = "0.19"
gtk = {package = "gtk4", version = "0.8", features = ["v4_14"]}
gtk-macros = "0.3"
lazy_static = "1.0"
libc = "0.2"
log = "0.4"
lru-cache = "0.1"
once_cell = "1.3"
pango = "0.19"
pangocairo = "0.19"
ropey = "1.5"
serde_json = "1.0"
servo-fontconfig = "0.5"
