[package]
authors = ["Max Brunsfeld <maxbrunsfeld@gmail.com>"]
categories = ["parsing", "text-editors"]
description = "C grammar for the tree-sitter parsing library"
edition = "2021"
keywords = ["incremental", "parsing", "c"]
license = "MIT"
name = "tree-sitter-c"
readme = "bindings/rust/README.md"
repository = "https://github.com/tree-sitter/tree-sitter-c"
version = "0.20.0"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.20"

[build-dependencies]
cc = "1.0"
