[package]
authors = [
  "Max Brunsfeld <maxbrunsfeld@gmail.com>",
  "Douglas Creager <dcreager@dcreager.net>",
]
categories = ["parsing", "text-editors"]
description = "Go grammar for the tree-sitter parsing library"
edition = "2021"
keywords = ["incremental", "parsing", "go"]
license = "MIT"
name = "tree-sitter-go"
readme = "bindings/rust/README.md"
repository = "https://github.com/tree-sitter/tree-sitter-go"
version = "0.19.1"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">= 0.19, < 0.21"

[build-dependencies]
cc = "1.0"
