[package]
categories = ["parsing", "text-editors"]
description = "html grammar for the tree-sitter parsing library"
edition = "2021"
keywords = ["incremental", "parsing", "html"]
name = "tree-sitter-html"
repository = "https://github.com/tree-sitter/tree-sitter-html"
version = "0.19.0"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.19"

[build-dependencies]
cc = "1.0"
