[package]
authors = [
  "Max Brunsfeld <maxbrunsfeld@gmail.com>",
  "Douglas Creager <dcreager@dcreager.net>",
]
categories = ["parsing", "text-editors"]
description = "JavaScript grammar for the tree-sitter parsing library"
edition = "2021"
keywords = ["incremental", "parsing", "javascript"]
license = "MIT"
name = "tree-sitter-javascript"
readme = "bindings/rust/README.md"
repository = "https://github.com/tree-sitter/tree-sitter-javascript"
version = "0.20.0"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">= 0.19, < 0.21"

[build-dependencies]
cc = "1.0"
