[package]
authors = ["Max Brunsfeld <maxbrunsfeld@gmail.com>"]
categories = ["parsing", "text-editors"]
description = "Rust grammar for the tree-sitter parsing library"
edition = "2021"
keywords = ["incremental", "parsing", "rust"]
license = "MIT"
name = "tree-sitter-rust"
readme = "bindings/rust/README.md"
repository = "https://github.com/tree-sitter/tree-sitter-rust"
version = "0.20.1"

autoexamples = false
build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.20"

[build-dependencies]
cc = "1.0"
